Fixing some problems on mobile and improving about page

--- a/_scss/grid.scss
+++ b/_scss/grid.scss
@@ -17,6 +17,10 @@
   box-sizing: border-box;
 }
 
+.row {
+  margin-bottom: 40px;
+}
+
 
 /* For devices larger than 400px */
 
