--- a/_scss/typography.scss
+++ b/_scss/typography.scss
@@ -30,6 +30,7 @@ h1 {
 h2 {
   font-size: 3em;
   line-height: 1.25;
+  line-height: 0;
 }
 
 h3 {
